--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -91,8 +91,8 @@ $grid-breakpoints: (
   // max-width: 1214px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: $gutter-width / 2;
-  padding-right: $gutter-width / 2;
+  padding-left: calc($gutter-width / 2);
+  padding-right: calc($gutter-width / 2);
 }
 
 .container-fluid {
@@ -108,8 +108,8 @@ $grid-breakpoints: (
   display: flex;
   flex-wrap: wrap;
   // 原本是用於抵銷掉左右兩側的gap，但容易造成溢出，在此直接使用gap作為整體的15px內縮效果
-  margin-left: -calc($gutter-width / 2);
-  margin-right: -calc($gutter-width / 2);
+  margin-left: calc($gutter-width / -2);
+  margin-right: calc($gutter-width / -2);
 }
 
 %col {
