--- a/src/assets/scss/_extends.scss
+++ b/src/assets/scss/_extends.scss
@@ -37,3 +37,32 @@
   line-height: 22px;
   color: $text-gray;
 }
+
+// .modal-container共用樣式
+%modal-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: hsla(0, 0%, 60%, 0.6);
+}
+
+// modal共用樣式
+%modal {
+  position: absolute;
+  top: 54px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: 3;
+  border-radius: 14px;
+  background-color: $background;
+}
+
+// modal關閉按鈕共用樣式
+%modal-header-button {
+  font-size: 20px;
+  font-weight: 700;
+  color: $button-orange;
+}
