--- a/src/assets/scss/user-edit-modal.scss
+++ b/src/assets/scss/user-edit-modal.scss
@@ -1,33 +1,20 @@
 @import "_color.scss";
+@import "_extends.scss";
 
 .modal-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  background-color: hsla(0, 0%, 60%, 0.6);
+  @extend %modal-container;
 }
 
 .user-edit-modal {
-  position: absolute;
-  top: 54px;
-  left: 50%;
-  transform: translate(-50%, 0%);
+  @extend %modal;
   width: 600px;
   height: 300px;
-  z-index: 3;
-  border-radius: 14px;
-  background-color: $background;
   font-size: 18px;
   font-weight: 500;
 
   .modal-header {
     button {
-      font-size: 20px;
-      font-weight: 700;
-      color: $button-orange;
+      @extend %modal-header-button;
     }
   }
 
