--- a/src/assets/scss/user-edit-modal.scss
+++ b/src/assets/scss/user-edit-modal.scss
@@ -13,6 +13,7 @@
   font-weight: 500;
 
   .modal-header {
+    height: 60px;
     button {
       @extend %modal-header-button;
     }
@@ -33,10 +34,34 @@
   }
 
   .modal-body {
-    img {
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
+    padding: 0px;
+
+    .photo-area {
+      height: 260px;
+      position: relative;
+      
+      button {
+        padding: 0;
+      }
+      
+      .cover {
+        width: 600px;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 0px;
+        &:hover {
+          opacity: 0.6;
+        }
+      }
+
+      .avatar {
+        width: 120px;
+        height: 120px;
+        position: absolute;
+        left: 15px;
+        bottom: 0px;
+        border: 4px solid $background;
+      }
     }
   }
 }
