--- a/src/assets/scss/user-edit-modal.scss
+++ b/src/assets/scss/user-edit-modal.scss
@@ -49,6 +49,7 @@
         width: 100%;
         height: 100%;
         opacity: 0;
+        z-index: 4;
         cursor: pointer;
       }
       
@@ -60,6 +61,16 @@
         position: relative;
         &:hover {
           opacity: 0.6;
+          &::after {
+            content: "\2912";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: $background;
+            font-size: 50px;
+            cursor: pointer;
+          }
         }
         
         .cover {
@@ -82,6 +93,16 @@
 
         &:hover {
           @extend %standard-boxshadow;
+          &::after {
+            content: "\2912";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: $background;
+            font-size: 30px;
+            cursor: pointer;
+          }
         }
         
         .avatar {
