--- a/src/assets/scss/user-follow.scss
+++ b/src/assets/scss/user-follow.scss
@@ -4,6 +4,8 @@
 // 整體user-follow區塊設定
 .user-follow {
   width: 600px;
+  height: 100%;
+  overflow-y: scroll;
   border-left: 1px solid #E6ECF0;
   border-right: 1px solid #E6ECF0;
 }
@@ -27,7 +29,7 @@
 
 // 卡片切換導覽列設定
 .card-buttons {
-  margin: 10px 0;
+  margin-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid $modal-outline;
 }
