--- a/src/assets/scss/navbar.scss
+++ b/src/assets/scss/navbar.scss
@@ -7,6 +7,8 @@
   justify-content: start;
   align-items: stretch;
   background-color: $background;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .navbar-logo {
@@ -33,9 +35,8 @@
 
 // icon定位
 .nav-item:last-child {
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  width: 100%;
 }
 
 // 按鈕設定
