--- a/src/assets/scss/popular.scss
+++ b/src/assets/scss/popular.scss
@@ -3,7 +3,7 @@
 .popular {
   width: 360px;
   height: 520px;
-  margin: 15px;
+  margin: 15px 0 0 30px;
   border-radius: 14px;
   background-color: $popular-background;
   line-height: 1;
