--- a/src/assets/scss/reply.scss
+++ b/src/assets/scss/reply.scss
@@ -6,12 +6,13 @@
 $border-style: 1px solid #e6ecf0;
 
 .wrapper {
-  border-bottom: $border-style;
+  border: $border-style;
 }
 .arrow {
   width: 17px;
   height: 14px;
   margin: 1.25rem;
+  cursor: pointer;
 }
 .returnTweet {
   margin: 1rem;
