UserEditModalAPI: 新增強制重整畫面&cover的CSS微調

--- a/src/assets/scss/user-profile-card.scss
+++ b/src/assets/scss/user-profile-card.scss
@@ -24,6 +24,7 @@ $border-style: 1px solid #e6ecf0;
 .cover {
   max-width: 600px;
   max-height: 200px;
+  object-fit: cover;
   border-radius: 0%;
 }
 .avatar {
