UserFollowAPI: 新增追隨/取消追隨功能&跑版調整

--- a/src/assets/scss/user-follow.scss
+++ b/src/assets/scss/user-follow.scss
@@ -3,7 +3,7 @@
 
 // 整體user-follow區塊設定
 .user-follow {
-  min-width: 600px;
+  width: 600px;
   border-left: 1px solid #E6ECF0;
   border-right: 1px solid #E6ECF0;
 }
