--- a/src/assets/scss/reply.scss
+++ b/src/assets/scss/reply.scss
@@ -24,6 +24,7 @@ $border-style: 1px solid #e6ecf0;
   width: 50px;
   height: 50px;
   margin: 0.94rem 0.63rem 0.94rem 0.94rem;
+  cursor: pointer;
 }
 .account {
   @extend %second-title-text;
@@ -60,4 +61,5 @@ $border-style: 1px solid #e6ecf0;
   width: 25px;
   height: 25px;
   border-radius: 0%;
+  cursor: pointer;
 }
